2024-06-02/cluster-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 30080
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
